Додає анімацію на всі елементи з hover та focus, та позиціонує блок  з текстом в секції services

--- a/index.html
+++ b/index.html
@@ -158,30 +158,33 @@
           <ul class="services-list list">
             <li class="services-item">
               <img
-                class="image"
+                class="services-img image"
                 src="./images/services/backend.jpg"
                 alt="Программист печатает код"
                 width="370"
                 height="294"
               />
+              <p class="services-description">Десктопные приложения</p>
             </li>
             <li class="services-item">
               <img
-                class="image"
+                class="services-img image"
                 src="./images/services/frontend.jpg"
                 alt="Программист верстает приложение"
                 width="370"
                 height="294"
               />
+              <p class="services-description">Мобильные приложения</p>
             </li>
             <li class="services-item">
               <img
-                class="image"
+                class="services-img image"
                 src="./images/services/design.jpg"
                 alt="Дизайнер работает с палитрой"
                 width="370"
                 height="294"
               />
+              <p class="services-description">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
