--- a/portfolio.html
+++ b/portfolio.html
@@ -94,28 +94,42 @@
           <ul class="works-list list">
             <li class="works-item">
               <a class="work-link" href=""
-                ><img
-                  class="image"
-                  src="./images/works/tehnokryak.jpg"
-                  alt="Проект Технокряк"
-                  width="370"
-                  height="294"
-                />
+                ><div class="thumb">
+                  <img
+                    class="image"
+                    src="./images/works/tehnokryak.jpg"
+                    alt="Проект Технокряк"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="work-overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="work-container">
                   <h3 class="work-title">Технокряк</h3>
                   <p class="work-text">Веб-сайт</p>
-                </div></a
-              >
+                </div>
+              </a>
             </li>
             <li class="works-item">
               <a class="work-link" href=""
-                ><img
-                  class="image"
-                  src="./images/works/poster-new-orlean-vs-golden-star.jpg"
-                  alt="Постер New Orlean vs Golden Star"
-                  width="370"
-                  height="294"
-                />
+                ><div class="thumb">
+                  <img
+                    class="image"
+                    src="./images/works/poster-new-orlean-vs-golden-star.jpg"
+                    alt="Постер New Orlean vs Golden Star"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="work-overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="work-container">
                   <h3 class="work-title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -126,13 +140,20 @@
             </li>
             <li class="works-item">
               <a class="work-link" href=""
-                ><img
-                  class="image"
-                  src="./images/works/restoran-seafood.jpg"
-                  alt="Проект ресторан Seafood"
-                  width="370"
-                  height="294"
-                />
+                ><div class="thumb">
+                  <img
+                    class="image"
+                    src="./images/works/restoran-seafood.jpg"
+                    alt="Проект ресторан Seafood"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="work-overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="work-container">
                   <h3 class="work-title">
                     Ресторан <span lang="en">Seafood</span>
@@ -143,13 +164,20 @@
             </li>
             <li class="works-item">
               <a class="work-link" href=""
-                ><img
-                  class="image"
-                  src="./images/works/proekt-prime.jpg"
-                  alt="Проект Prime"
-                  width="370"
-                  height="294"
-                />
+                ><div class="thumb">
+                  <img
+                    class="image"
+                    src="./images/works/proekt-prime.jpg"
+                    alt="Проект Prime"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="work-overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="work-container">
                   <h3 class="work-title">
                     Проект <span lang="en">Prime</span>
@@ -160,13 +188,20 @@
             </li>
             <li class="works-item">
               <a class="work-link" href=""
-                ><img
-                  class="image"
-                  src="./images/works/proekt-boxes.jpg"
-                  alt="Проект Boxes"
-                  width="370"
-                  height="294"
-                />
+                ><div class="thumb">
+                  <img
+                    class="image"
+                    src="./images/works/proekt-boxes.jpg"
+                    alt="Проект Boxes"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="work-overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="work-container">
                   <h3 class="work-title">
                     Проект <span lang="en">Boxes</span>
@@ -177,13 +212,20 @@
             </li>
             <li class="works-item">
               <a class="work-link" href=""
-                ><img
-                  class="image"
-                  src="./images/works/inspiration-has-no-borders.jpg"
-                  alt="Проект Inspiration has no Borders"
-                  width="370"
-                  height="294"
-                />
+                ><div class="thumb">
+                  <img
+                    class="image"
+                    src="./images/works/inspiration-has-no-borders.jpg"
+                    alt="Проект Inspiration has no Borders"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="work-overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="work-container">
                   <h3 class="work-title" lang="en">
                     Inspiration has no Borders
@@ -194,13 +236,20 @@
             </li>
             <li class="works-item">
               <a class="work-link" href=""
-                ><img
-                  class="image"
-                  src="./images/works/izdanie-limited-edition.jpg"
-                  alt="Проект издание Limited Edition"
-                  width="370"
-                  height="294"
-                />
+                ><div class="thumb">
+                  <img
+                    class="image"
+                    src="./images/works/izdanie-limited-edition.jpg"
+                    alt="Проект издание Limited Edition"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="work-overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="work-container">
                   <h3 class="work-title">
                     Издание <span lang="en">Limited Edition</span>
@@ -211,13 +260,20 @@
             </li>
             <li class="works-item">
               <a class="work-link" href=""
-                ><img
-                  class="image"
-                  src="./images/works/proekt-lab.jpg"
-                  alt="Проект LAB"
-                  width="370"
-                  height="294"
-                />
+                ><div class="thumb">
+                  <img
+                    class="image"
+                    src="./images/works/proekt-lab.jpg"
+                    alt="Проект LAB"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="work-overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="work-container">
                   <h3 class="work-title">Проект <span lang="en">LAB</span></h3>
                   <p class="work-text">Маркетинг</p>
@@ -226,13 +282,20 @@
             </li>
             <li class="works-item">
               <a class="work-link" href=""
-                ><img
-                  class="image"
-                  src="./images/works/growing-business.jpg"
-                  alt="Проект Growing Business"
-                  width="370"
-                  height="294"
-                />
+                ><div class="thumb">
+                  <img
+                    class="image"
+                    src="./images/works/growing-business.jpg"
+                    alt="Проект Growing Business"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="work-overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="work-container">
                   <h3 class="work-title" lang="en">Growing Business</h3>
                   <p class="work-text">Приложение</p>
