--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@
         <div class="container hero-container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button class="hero-btn btn" type="button">Заказать услугу</button>
+          <div class="backdrop is-hidden">
+            <div class="modal-wrapper">
+              <button class="modal-btn btn" type="button"><svg class="close-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-close-x"></use>
+              </svg></button>
+              <form class="modal-form"></form>
+            </div>
+          </div>
         </div>
       </section>
       <!-- Benefits section -->
