--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
       <section class="section hero">
         <div class="container hero-container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button class="hero-btn btn" type="button">Заказать услугу</button>
-          <div class="backdrop is-hidden">
+          <button class="hero-btn btn" type="button" data-modal-open>Заказать услугу</button>
+          <div class="backdrop is-hidden" data-modal>
             <div class="modal-wrapper">
-              <button class="modal-btn btn" type="button"><svg class="close-icon" width="18" height="18">
+              <button class="modal-btn btn" type="button" data-modal-close><svg class="close-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-close-x"></use>
               </svg></button>
               <form class="modal-form"></form>
@@ -546,5 +546,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
